--- a/config/optional/facets.facet.search_category.yml
+++ b/config/optional/facets.facet.search_category.yml
@@ -5,17 +5,21 @@ dependencies:
     - search_api.index.content
     - views.view.search
   module:
+    - facets_pretty_paths
     - search_api
-id: content_type
-name: 'Content Type'
-url_alias: content_type
+third_party_settings:
+  facets_pretty_paths:
+    coder: taxonomy_term_name_coder
+id: search_category
+name: Category
+url_alias: category
 weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: type
+field_identifier: field_categories
 facet_source_id: 'search_api:views_page__search__search'
 widget:
-  type: checkbox
+  type: links
   config:
     show_numbers: true
     soft_limit: 0
@@ -64,4 +68,4 @@ processor_configs:
     settings: {  }
 empty_behavior:
   behavior: none
-show_title: true
+show_title: false
