--- a/config/optional/facets.facet.search_content_type.yml
+++ b/config/optional/facets.facet.search_content_type.yml
@@ -5,14 +5,18 @@ dependencies:
     - search_api.index.content
     - views.view.search
   module:
+    - facets_pretty_paths
     - search_api
-id: categories
-name: Categories
-url_alias: categories
+third_party_settings:
+  facets_pretty_paths:
+    coder: default_coder
+id: search_content_type
+name: 'Content Type'
+url_alias: content_type
 weight: 0
 min_count: 1
-show_only_one_result: false
-field_identifier: field_categories
+show_only_one_result: true
+field_identifier: type
 facet_source_id: 'search_api:views_page__search__search'
 widget:
   type: links
@@ -51,6 +55,11 @@ processor_configs:
       sort: 40
     settings:
       sort: ASC
+  translate_entity:
+    processor_id: translate_entity
+    weights:
+      build: 5
+    settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
