--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,46 @@
     "license": "GPL-2.0-or-later",
     "require": {
         "acquia/drupal-environment-detector": "^1.4",
+        "acquia/memcache-settings": "^1",
         "cweagans/composer-patches": "^1.7",
+        "drupal/acquia_connector": "^3",
+        "drupal/acquia_contenthub": "^2.25",
+        "drupal/acquia_lift": "^4.2",
+        "drupal/acquia_purge": "^1",
+        "drupal/acquia_telemetry-acquia_telemetry": "1.0-alpha5",
+        "drupal/acsf": "^2",
+        "drupal/autologout": "^1",
+        "drupal/checklistapi": "^2.0",
+        "drupal/config_ignore": "2.3.0",
+        "drupal/config_rewrite": "^1.4",
+        "drupal/core": "~9.2.16 || ~9.3.9",
+        "drupal/default_content": "2.0.0-alpha1",
         "drupal/entity_clone": "1.0-beta6",
+        "drupal/field_group": "^3",
         "drupal/focal_point": "1.5",
+        "drupal/google_analytics": "^4.0",
+        "drupal/google_tag": "^1",
+        "drupal/honeypot": "^2.0",
+        "drupal/imagemagick": "^3",
+        "drupal/jsonapi_extras": "^3",
+        "drupal/memcache": "^2.2",
+        "drupal/moderation_dashboard": "1.0.0-beta3",
+        "drupal/moderation_sidebar": "^1.4",
+        "drupal/mysql56": "^1.0",
+        "drupal/password_policy": "^3.0",
         "drupal/pathauto": "^1",
+        "drupal/recaptcha": "^3",
+        "drupal/redirect": "^1",
+        "drupal/reroute_email": "2.1.0",
+        "drupal/responsive_preview": "^1.0",
         "drupal/scheduler_content_moderation_integration": "^1.3",
         "drupal/schema_metatag": "^2.2",
+        "drupal/seckit": "^2",
+        "drupal/shield": "^1",
         "drupal/simple_sitemap": "^4.0",
         "drupal/smart_trim": "^1.3",
+        "drupal/social_media_links": "^2.7",
+        "drupal/username_enumeration_prevention": "^1.2",
         "drupal/workbench_email": "^2.2"
     },
     "config": {
@@ -35,16 +67,29 @@
         },
         "enable-patching": true,
         "patches": {
+            "drupal/acquia_telemetry-acquia_telemetry": {
+                "3165473 - Add check for core index": "https://www.drupal.org/files/issues/2020-08-18/3165473-27.patch",
+                "3267344 - Use markup to render text on status report page": "https://git.drupalcode.org/project/acquia_telemetry/-/merge_requests/1.diff"
+            },
+            "drupal/config_ignore": {
+                "2857247 - Support for export filtering via Drush": "https://www.drupal.org/files/issues/2021-08-18/config_ignore_2857247-75.patch"
+            },
             "drupal/core": {
-                "It is possible to overflow the number of items allowed in Media Library": "https://www.drupal.org/files/issues/2019-12-28/3082690-80.patch",
-                "Media Library widget produces error this value should not be null when field is required": "https://www.drupal.org/files/issues/2020-10-08/3160238-25.patch",
-                "SQLite database locking errors cause fatal errors": "https://www.drupal.org/files/issues/1120020-59.patch"
+                "3059955 - It is possible to overflow the number of items allowed in Media Library": "https://www.drupal.org/files/issues/2019-12-28/3082690-80.patch",
+                "3160238 - Media Library widget produces \"This value should not be null\" error when field is required": "https://www.drupal.org/files/issues/2020-10-08/3160238-25.patch",
+                "3160238 - SQLite database locking errors cause fatal errors": "https://www.drupal.org/files/issues/1120020-59.patch"
+            },
+            "drupal/default_content": {
+                "2698425 - Duplicate content issues in default content": "https://git.drupalcode.org/project/default_content/-/merge_requests/5.patch"
             },
             "drupal/entity_clone": {
                 "Allow fields implementing EntityReferenceFieldItemListInterface to clone their referenced entities": "https://www.drupal.org/files/issues/2021-04-14/3013286-19.patch"
             },
             "drupal/focal_point": {
                 "3162210 - Preview link accidentally closes the media library": "https://www.drupal.org/files/issues/2020-10-06/3162210-17.patch"
+            },
+            "drupal/reroute_email": {
+                "3254806 - Invalid argument supplied for foreach() in reroute_email_check_email_by_permission() (line 316)": "https://git.drupalcode.org/project/reroute_email/-/commit/438a67caeb0b0cc47d1deb0cee50afda9a907dc8.diff"
             }
         }
     },
