ACMS-1148: Add starter and development as submodules.

--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
         "acquia/drupal-environment-detector": "^1.4",
         "acquia/memcache-settings": "^1",
         "cweagans/composer-patches": "^1.7",
+        "drupal/acquia_cms_search": "^1.0",
         "drupal/acquia_connector": "^3",
         "drupal/acquia_contenthub": "^2.25",
         "drupal/acquia_lift": "^4.2",
         "drupal/acquia_purge": "^1",
+        "drupal/acquia_search": "^3.0.3",
         "drupal/acquia_telemetry-acquia_telemetry": "1.0-alpha5",
         "drupal/acsf": "^2",
         "drupal/autologout": "^1",
@@ -19,6 +21,7 @@
         "drupal/config_rewrite": "^1.4",
         "drupal/core": "~9.2.16 || ~9.3.9",
         "drupal/default_content": "2.0.0-alpha1",
+        "drupal/diff": "^1",
         "drupal/entity_clone": "1.0-beta6",
         "drupal/field_group": "^3",
         "drupal/focal_point": "1.5",
