--- a/composer.json
+++ b/composer.json
@@ -25,19 +25,19 @@
         "drupal/field_group": "^3",
         "drupal/focal_point": "1.5",
         "drupal/google_analytics": "^4.0",
-        "drupal/google_tag": "^1",
+        "drupal/google_tag": "^1.5",
         "drupal/honeypot": "^2.0",
         "drupal/imagemagick": "^3",
         "drupal/jsonapi_extras": "^3",
         "drupal/memcache": "^2.2",
         "drupal/moderation_dashboard": "1.0.0-beta3",
-        "drupal/moderation_sidebar": "^1.4",
+        "drupal/moderation_sidebar": "^1.5",
         "drupal/mysql56": "^1.0",
         "drupal/password_policy": "^3.0",
         "drupal/pathauto": "^1",
         "drupal/recaptcha": "^3",
         "drupal/redirect": "^1",
-        "drupal/reroute_email": "2.1.0",
+        "drupal/reroute_email": "^2.1",
         "drupal/responsive_preview": "^1.0",
         "drupal/scheduler_content_moderation_integration": "^1.3",
         "drupal/schema_metatag": "^2.2",
@@ -89,9 +89,6 @@
             },
             "drupal/focal_point": {
                 "3162210 - Preview link accidentally closes the media library": "https://www.drupal.org/files/issues/2020-10-06/3162210-17.patch"
-            },
-            "drupal/reroute_email": {
-                "3254806 - Invalid argument supplied for foreach() in reroute_email_check_email_by_permission() (line 316)": "https://git.drupalcode.org/project/reroute_email/-/commit/438a67caeb0b0cc47d1deb0cee50afda9a907dc8.diff"
             }
         }
     },
