--- a/drush.services.yml
+++ b/drush.services.yml
@@ -1,7 +1,7 @@
 services:
   acquia_cms_common.hooks:
     class: 'Drupal\acquia_cms_common\Commands\Hooks'
-    arguments: ['@module_handler', '@acquia_cms_common.utility']
+    arguments: ['@module_handler', '@acquia_cms_common.utility', '@config.factory']
     tags:
       - { name: drush.command }
   acquia_cms_common_module.commands:
@@ -11,7 +11,7 @@ services:
       - { name: drush.command }
   acquia_cms_common.commands:
     class: 'Drupal\acquia_cms_common\Commands\AcmsCommands'
-    arguments: ['@module_handler','@logger.factory', '@keyvalue']
+    arguments: ['@module_handler','@logger.factory', '@keyvalue', '@acquia_cms_common.utility']
     tags:
       - { name: drush.command }
   acquia_cms_common.config_commands:
