--- a/config/install/user.role.content_administrator.yml
+++ b/config/install/user.role.content_administrator.yml
@@ -14,13 +14,20 @@ permissions:
   - 'access components'
   - 'access content elements group'
   - 'access content overview'
+  - 'access cpt_cat_accordion_components cohesion_component_category group'
+  - 'access cpt_cat_basic_components cohesion_component_category group'
+  - 'access cpt_cat_card_components cohesion_component_category group'
   - 'access cpt_cat_dynamic_components cohesion_component_category group'
+  - 'access cpt_cat_feature_sections cohesion_component_category group'
   - 'access cpt_cat_general_components cohesion_component_category group'
   - 'access cpt_cat_hero_components cohesion_component_category group'
   - 'access cpt_cat_interactive_components cohesion_component_category group'
   - 'access cpt_cat_layout_components cohesion_component_category group'
   - 'access cpt_cat_map_components cohesion_component_category group'
   - 'access cpt_cat_media_components cohesion_component_category group'
+  - 'access cpt_cat_read_more_components cohesion_component_category group'
+  - 'access cpt_cat_slider_components cohesion_component_category group'
+  - 'access cpt_cat_tab_components cohesion_component_category group'
   - 'access cpt_cat_template_components cohesion_component_category group'
   - 'access custom elements group'
   - 'access drupal core elements group'
@@ -32,9 +39,14 @@ permissions:
   - 'access helpers'
   - 'access hlp_cat_dynamic_helpers cohesion_helper_category group'
   - 'access hlp_cat_general_helpers cohesion_helper_category group'
+  - 'access hlp_cat_hero_sections cohesion_helper_category group'
   - 'access hlp_cat_interactive_helpers cohesion_helper_category group'
   - 'access hlp_cat_layout_helpers cohesion_helper_category group'
   - 'access hlp_cat_media_helpers cohesion_helper_category group'
+  - 'access hlp_cat_miscellaneous cohesion_helper_category group'
+  - 'access hlp_cat_page_layouts cohesion_helper_category group'
+  - 'access hlp_cat_slider_sections cohesion_helper_category group'
+  - 'access hlp_cat_text_sections cohesion_helper_category group'
   - 'access interactive elements group'
   - 'access layout elements group'
   - 'access media elements group'
@@ -43,6 +55,7 @@ permissions:
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'access view elements group'
+  - 'access visual page builder'
   - 'administer media'
   - 'administer moderation sidebar'
   - 'administer nodes'
