--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "drupal/pathauto": "^1",
         "drupal/recaptcha": "^3",
         "drupal/redirect": "^1",
-        "drupal/reroute_email": "^2.1",
+        "drupal/reroute_email": "2.1.0",
         "drupal/responsive_preview": "^1.0",
         "drupal/scheduler_content_moderation_integration": "^1.3",
         "drupal/schema_metatag": "^2.2",
