--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "drupal/entity_clone": "1.0-beta6",
         "drupal/field_group": "^3",
         "drupal/focal_point": "1.5",
-        "drupal/google_analytics": "^4.0",
+        "drupal/google_analytics": "4.0.0",
         "drupal/google_tag": "^1.5",
         "drupal/honeypot": "^2.0",
         "drupal/imagemagick": "^3",
@@ -89,6 +89,9 @@
             },
             "drupal/focal_point": {
                 "3162210 - Preview link accidentally closes the media library": "https://www.drupal.org/files/issues/2020-10-06/3162210-17.patch"
+            },
+            "drupal/google_analytics": {
+                "3246597 - Add dependency on drupal:path_alias": "https://www.drupal.org/files/issues/2021-11-25/google_analytics-3246597-7.patch"
             }
         }
     },
