--- a/acquia_cms_common.services.yml
+++ b/acquia_cms_common.services.yml
@@ -23,3 +23,9 @@ services:
       - { name: module_install.uninstall_validator }
     arguments: [ '@entity_type.manager', '@string_translation' ]
     lazy: true
+
+  acquia_cms_common.https_redirect_subscriber:
+    class: '\Drupal\acquia_cms_common\EventSubscriber\HttpsRedirectSubscriber'
+    arguments: ['@config.factory', '@cache.config', '@request_stack']
+    tags:
+      - { name: 'event_subscriber' }
